head component styleed

--- a/index.html
+++ b/index.html
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-
-    <main>
-
-        <h1>Hubspot</h1>
-    </main>
-    
-</body>
+  </head>
+  <body>
+    <div class="hero">
+      <header>
+        <p class="sm-head">
+          Welcome to <b>The World's largest Data Network.</b>
+        </p>
+        <p class="lg-head">
+          Precision Medicine & <br />
+          Drug Development <br />Require Data.
+        </p>
+        <p class="md-head">
+          <i>We make</i> <b>data</b> <b>connected</b>, <b>accessible</b> &
+          <b>usable.</b>
+        </p>
+      </header>
+      <main>
+        <table>
+          <tr class="navbar">
+            <td>Data</td>
+            <td>Federated & AI PaaS Solutions</td>
+            <td>Whitepapers ,Publications & Policies</td>
+            <td>Learning & Development</td>
+          </tr>
+        </table>
+        <div class="cards">
+          <div class="card cardio">
+            <p class="above">DATA CATALOGUE</p>
+            <h1>Cardiometabolic</h1>
+            <p class="below">245 Subtypes</p>
+            <div class="logo-box"></div>
+          </div>
+          <div class="card cns">
+            <p class="above">DATA CATALOGUE</p>
+            <h1>CNS</h1>
+            <p class="below">245 Subtypes</p>
+            <div class="logo-box"></div>
+          </div>
+          <div class="card derma">  
+            <p class="above">DATA CATALOGUE</p>
+            <h1>Dermatology</h1>
+            <p class="below">245 Subtypes</p>
+            <div class="logo-box"></div></div>
+          <div class="card immu">
+            <p class="above">DATA CATALOGUE</p>
+            <h1>Immunology</h1>
+            <p class="below">245 Subtypes</p>
+            <div class="logo-box"></div></div></div>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
