experience section added

--- a/index.html
+++ b/index.html
@@ -1,60 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="hero">
-      <header>
-        <p class="sm-head">
-          Welcome to <b>The World's largest Data Network.</b>
-        </p>
-        <p class="lg-head">
-          Precision Medicine & <br />
-          Drug Development <br />Require Data.
-        </p>
-        <p class="md-head">
-          <i>We make</i> <b>data</b> <b>connected</b>, <b>accessible</b> &
-          <b>usable.</b>
-        </p>
-      </header>
-      <main>
-        <table>
-          <tr class="navbar">
-            <td>Data</td>
-            <td>Federated & AI PaaS Solutions</td>
-            <td>Whitepapers ,Publications & Policies</td>
-            <td>Learning & Development</td>
-          </tr>
-        </table>
-        <div class="cards">
-          <div class="card cardio">
-            <p class="above">DATA CATALOGUE</p>
-            <h1>Cardiometabolic</h1>
-            <p class="below">245 Subtypes</p>
-            <div class="logo-box"></div>
-          </div>
-          <div class="card cns">
-            <p class="above">DATA CATALOGUE</p>
-            <h1>CNS</h1>
-            <p class="below">245 Subtypes</p>
-            <div class="logo-box"></div>
-          </div>
-          <div class="card derma">  
-            <p class="above">DATA CATALOGUE</p>
-            <h1>Dermatology</h1>
-            <p class="below">245 Subtypes</p>
-            <div class="logo-box"></div></div>
-          <div class="card immu">
-            <p class="above">DATA CATALOGUE</p>
-            <h1>Immunology</h1>
-            <p class="below">245 Subtypes</p>
-            <div class="logo-box"></div></div></div>
-        </div>
-      </main>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="style.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <section class="hero">
+    <header class="header">
+      <div>
+      <p class="sm-head">
+        Welcome to <b>The World's largest Data Network.</b>
+      </p>
+      <p class="lg-head">
+        Precision Medicine & <br />
+        Drug Development <br />Require Data.
+      </p>
+      <p class="md-head">
+        <i>We make</i> <b>data</b> <b>connected</b>, <b>accessible</b> &
+        <b>usable.</b>
+      </p>
     </div>
-  </body>
+    <div>
+      <img class="globe" src="./assests/globe.png" alt="globe">
+    </div>
+    </header>
+    <main>
+      <table>
+        <tr class="navbar">
+          <td>Data</td>
+          <td>Federated & AI PaaS Solutions</td>
+          <td>Whitepapers, Publications & Policies</td>
+          <td>Learning & Development</td>
+        </tr>
+      </table>
+      <div class="slider">
+        <button class="previous" > <i class="fas fa-chevron-left"></i> </button>
+            <div class="cards">
+
+              <div class="card cardio">
+                <p class="above">DATA CATALOGUE</p>
+                <h1>Cardiometabolic</h1>
+                <p class="below">245 Subtypes</p>
+                <div class="logo-box"></div>
+              </div>
+              <div class="card cns">
+                <p class="above">DATA CATALOGUE</p>
+                <h1>CNS</h1>
+                <p class="below">245 Subtypes</p>
+                <div class="logo-box"></div>
+              </div>
+              <div class="card derma">
+                <p class="above">DATA CATALOGUE</p>
+                <h1>Dermatology</h1>
+                <p class="below">245 Subtypes</p>
+                <div class="logo-box"></div>
+              </div>
+              <div class="card immu">
+                <p class="above">DATA CATALOGUE</p>
+                <h1>Immunology</h1>
+                <p class="below">245 Subtypes</p>
+                <div class="logo-box"></div>
+              </div>
+            </div>
+            <button class="next"> <i class="fas fa-chevron-right"></i>  </button>
+
+      </div>
+    </main>
+
+
+  </section>
+
+  <!-- experience  section  -->
+  <section class="experience">
+    <h1>One experience.</h1>
+    <h2>Global Impact.</h2>
+    <div class="container">
+      <div class="block">
+        <div class="title">100M+</div>
+        <div class="subtitle">Patient, health, and multi- <br>omic datasets for research,<br> drug development, and <br> clinical trials</div>
+      </div>
+      <div class="block">
+        <div class="title">>30</div>
+        <div class="subtitle">Global data providers <br>including, biobanks and <br> national initiatives</div>
+      </div>
+      <div class="block">
+        <div class="title">+200</div>
+        <div class="subtitle">Diseases, conditions and <br> research areas to align your <br> R&D requirements </div>
+      </div>
+      <div class="block">
+        <div class="title">45K+</div>
+        <div class="subtitle">Users experiencing <br> the power of Lifebit</div>
+      </div>
+      <div class="block">
+        <div class="title">105+</div>
+        <div class="subtitle">Petabytes of <br> precision health <br> data on platform</div>
+      </div>
+      <div class="block">
+        <div class="title">395%</div>
+        <div class="subtitle">Documented return <br> on investment</div>
+      </div>
+      <div class="block">
+        <div class="title">40%</div>
+        <div class="subtitle">Average time savings for bioinformaticians</div>
+      </div>
+    </div>
+  </section>
+ 
+
+  </div>
+</body>
+
 </html>
